<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Califícame!</string>

    <!-- Hints -->
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="change_image_hint">Change image</string>
    <string name="change_password_hint">Change Password</string>
    <string name="password_hint">Password</string>
    <string name="search_hint">Search</string>

    <!-- Labels -->
    <string name="login_title_label">Welcome back!</string>
    <string name="sign_up_title_label">Create an Account</string>
    <string name="account_exists_label">Already have an account?</string>
    <string name="account_does_not_exist_label">Don\'t have an account?</string>
    <string name="sign_in_label">Sign In</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="about_us_label">About Us</string>
    <string name="help_label">Help</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="registered_reviews">Reviews registered: %d</string>
    <string name="registered_stats">Stats registered: %d</string>
    <string name="progress_percentage">%d %s</string>
    <string name="registered_professors">Professors registered: %d</string>

    <!-- Texts -->
    <string name="about_us_text"> We are focused on developing a system that will provide college students with extra, detailed and complete information regarding professors under universities.In the same way, providing a space to share previous experiences with those professors, thus generating a space by and for the students.</string>
    <string name="recov_pass">Write you email and we\'ll send you a link to get back your account.</string>

    <!-- Buttons -->
    <string name="forgot_password_text_button">Forgot Password</string>
    <string name="skip_sign_in_text_button">Skip Sign In</string>
    <string name="skip_sign_up_text_button">Skip Sign Up</string>
    <string name="cancel_label">Cancel</string>
    <string name="send_label">Send</string>
    <string name="view_review">View reviews</string>
    <string name="add_review">Add review</string>

    <!-- FAQ -->
    <string name="faq_text">In this section you will find the answers to FAQs</string>
    <string name="faq_1">How to use the app?</string>
    <string name="faq_2">How to find my university?</string>
    <string name="faq_3">How to find my faculty?</string>
    <string name="faq_4">How to find my professor?</string>
    <string name="faq_5">How to add a review?</string>
    <string name="faq_6">Can I leave a review?</string>

    <!-- Version -->
    <string name="version">Version 1.0</string>

    <!-- Drawer -->
    <!-- Header -->
    <string name="drawer_header_title">Username</string>
    <string name="drawer_header_subtitle">Email</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_change_university">Change university</string>
    <string name="drawer_change_faculty">Change faculty</string>

    <string name="drawer_help">Help</string>
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_sign_out">Sign out</string>

    <!-- More -->
    <string name="welcome">Welcome to Califícame!</string>
    <string name="select_teacher">Teachers</string>
    <string name="not_defined_label">Not defined</string>
    <string name="no_comment_label">No comments</string>
    <string name="select_signature">Select a subject:</string>
    <string name="select_university">Select a university:</string>
    <string name="select_professor">Select a professor:</string>
    <string name="select_faculty">Select faculty:</string>
    <string name="faculties">Faculties</string>


    <!-- Prueba -->
    <string name="university_label">University</string>
    <string name="professor_label">Professors</string>
    <string name="professors_label">Professors</string>
    <string name="universities_label">Universities</string>
    <string name="faculty_label">Faculty</string>
    <string name="faculties_label">Faculties</string>
    <string name="subject_label">Subject</string>
    <string name="subjects_label">Subjects</string>
    <string name="general_stats_label">General Stats</string>
    <string name="review_label">Review</string>
    <string name="stats_label">Stats</string>
    <string name="reviews_label">Reviews</string>

    <string name="professor_name">Hilda Castillo Zacatelco</string>
    <string name="signature_name">Programación</string>
    <string name="signature_name2">Programación II</string>
    <string name="signature_name3">Sistemas Operativos I</string>
    <string name="signature_name4">Matemáticas</string>
    <string name="signature_name5">Álgebra Superior</string>
    <string name="signature_name6">Redes Inalámbrica</string>
    <string name="signature_name7">Sistemas Operativos II</string>
    <string name="signature_name8">Graficación</string>
    <string name="signature_name9">Desarrollo de Aplicaciones Móviles</string>


    <!-- Ingreso/Registro Mensajes -->
    <string name="error_password">Incorrect password</string>
    <string name="error_noPassword">Write your password</string>
    <string name="error_email">Invalid email</string>
    <string name="error_noEmail">Write your email</string>
    <string name="error_username">Invalid username</string>
    <string name="error_noUsername">Write your username</string>

    <!-- Stats Questions-->
    <string name="question_1">How would you consider he or she domains in any subject?</string>
    <string name="question_2">How would you consider he or she is explaining any topic?</string>
    <string name="question_3">How complicated you consider that is passing any subject with this professor?</string>
    <string name="question_4">Does he or she offer consultancies?</string>
    <string name="question_5">Does he or she evaluate fairly?</string>
    <string name="question_6">Does he or she apply exams?</string>
    <string name="question_7">How satisfied are you with this professor?</string>

    <!-- Stats added -->
    <string name="stats_added">Stats successfully added</string>

    <string name="label_complexity">Complexity</string>
    <string name="label_clarity">Clarity</string>
    <string name="label_domain">Domain</string>
    <string name="label_fair_evaluation">Fair evaluation</string>
    <string name="label_consultancies">Consultancies</string>
    <string name="label_recommendation">Recommendation</string>

    <!--ENUMS-->
    <string name="difficulty_very_easy">Very easy</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_regular">Regular</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_very_hard">Very hard</string>
    <string-array name="difficulty">
        <item>@string/difficulty_very_hard</item>
        <item>@string/difficulty_hard</item>
        <item>@string/difficulty_regular</item>
        <item>@string/difficulty_easy</item>
        <item>@string/difficulty_very_easy</item>
    </string-array>

    <string name="frequency_always">Always</string>
    <string name="frequency_sometimes">Sometimes</string>
    <string name="frequency_never">Never</string>
    <string-array name="frequency">
        <item>@string/frequency_never</item>
        <item>@string/frequency_sometimes</item>
        <item>@string/frequency_always</item>

    </string-array>

    <string name="score_excellent">Excellent</string>
    <string name="score_good">Good</string>
    <string name="score_regular">Regular</string>
    <string name="score_bad">Bad</string>
    <string name="score_terrible">Terrible</string>
    <string-array name="score">
        <item>@string/score_terrible</item>
        <item>@string/score_bad</item>
        <item>@string/score_regular</item>
        <item>@string/score_good</item>
        <item>@string/score_excellent</item>
    </string-array>

    <string name="satisfaction_satisfied">Satisfied</string>
    <string name="satisfaction_half_satisfied">Half satisfied</string>
    <string name="satisfaction_dissatisfied">Dissatisfied</string>
    <string-array name="satisfaction">
        <item>@string/satisfaction_dissatisfied</item>
        <item>@string/satisfaction_half_satisfied</item>
        <item>@string/satisfaction_satisfied</item>
    </string-array>

    <string name="yesNo_yes">Yes</string>
    <string name="yesNo_no">No</string>
    <string-array name="YesNo">
        <item>@string/yesNo_no</item>
        <item>@string/yesNo_yes</item>
    </string-array>
    <string name="error_login">There\'s no register of this user</string>
    <string name="error_signup">There\'s a register with this information</string>
    <string name="understood">OK</string>

    <!-- textos para la push simple -->
    <string name="simple_title">New Review to: </string>
    <string name="simple_body">¡Thanks for your feedback!</string>

    <!-- textos para la push con acción -->
    <string name="action_title">New Review to: </string>
    <string name="action_body">¡Thanks for your feedback! We appreciate your support </string>

    <!-- textos para la push con botón -->
    <string name="button_title">New Review to: </string>
    <string name="button_body">¡Thanks for your feedback! We apreciate your support </string>
    <string name="button_text">Accept</string>

    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- CANAL CURSOS -->
    <string name="channel_courses">review</string>
    <string name="courses_description">New Review Notification</string>

</resources>