<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="24dp"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".FacultyActivity">

    <com.esielkar.calificame.view.HeaderCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="16dp"
        app:cardCornerRadius="8dp"
        app:contentPaddingRight="16dp"
        app:contentPaddingLeft="16dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingTop="16dp"
        app:header_card_title="@string/professor_name"
        app:header_card_subtitle="@string/faculty_name"
        app:header_card_overline="@string/university_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signatures_label"
            android:textSize="24sp"
            android:textStyle="bold" />
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_signature"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.esielkar.calificame.view.SubjectCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue_500"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="4dp"
                app:subject_name="@string/signature_name"/>

            <com.esielkar.calificame.view.SubjectCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue_500"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="4dp"
                app:subject_name="@string/signature_name2"/>

            <com.esielkar.calificame.view.SubjectCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue_500"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="4dp"
                app:subject_name="@string/signature_name3"/>

            <com.esielkar.calificame.view.SubjectCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue_500"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="4dp"
                app:subject_name="@string/signature_name4"/>

            <com.esielkar.calificame.view.SubjectCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue_500"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="4dp"
                app:subject_name="@string/signature_name5"/>

            <com.esielkar.calificame.view.SubjectCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue_500"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="4dp"
                app:subject_name="@string/signature_name6"/>

            <com.esielkar.calificame.view.SubjectCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue_500"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="4dp"
                app:subject_name="@string/signature_name7"/>

            <com.esielkar.calificame.view.SubjectCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue_500"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="4dp"
                app:subject_name="@string/signature_name8"/>

            <com.esielkar.calificame.view.SubjectCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue_500"
                app:cardElevation="16dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="4dp"
                app:subject_name="@string/signature_name9"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>